# LLVM-Examples

./: DockerFile  README.md  install.sh
.github/workflows/: msvc-analysis.yml
ClangAST/: CMakeLists.txt  DockerFile  README.md
ClangAST/include/: ClangASTVisitor.h  SSAWritterThunk.h  main.h
ClangAST/src/: astUsage.cpp  astVisitor.cpp  clangChecker.cpp  clangIfElseOld.cpp  clangIfElseTooling.cpp  clangPlugin.cpp  main.cpp
ClangAST/tests/: test1.cpp  test2.cpp
LLVM Slides/: presentation-1.aux  presentation-1.nav  presentation-1.tex
LLVM Slides/_minted-presentation-1/: 0F57A9EF63B1801C1627FC00346E17B01535120BA9DD53FADDCB8403D8DCFAE3.pygtex  0F57A9EF63B1801C1627FC00346E17B075FCD2556293AA9F8092384C143B0918.pygtex  542EC39F0CA5376F9F1A47EAA063597F1535120BA9DD53FADDCB8403D8DCFAE3.pygtex  7AEEE5A857027473614338424A4188EE1535120BA9DD53FADDCB8403D8DCFAE3.pygtex  936F37A88FF960F5FF5CED8CB87DC3BA1535120BA9DD53FADDCB8403D8DCFAE3.pygtex  936F37A88FF960F5FF5CED8CB87DC3BA75FCD2556293AA9F8092384C143B0918.pygtex  A32B77ECFCD38A057AF7194DB76917D41535120BA9DD53FADDCB8403D8DCFAE3.pygtex  A32B77ECFCD38A057AF7194DB76917D475FCD2556293AA9F8092384C143B0918.pygtex  B18DBB922FB16928FA0ADE4CCE5223241535120BA9DD53FADDCB8403D8DCFAE3.pygtex  B18DBB922FB16928FA0ADE4CCE52232475FCD2556293AA9F8092384C143B0918.pygtex  E147805644EFBFA1B9E9F9E365CF2D211535120BA9DD53FADDCB8403D8DCFAE3.pygtex  E147805644EFBFA1B9E9F9E365CF2D2175FCD2556293AA9F8092384C143B0918.pygtex  E71945BF0FB449F98F468B8AA89A8C021535120BA9DD53FADDCB8403D8DCFAE3.pygtex  F84CF8FFEA4BB48D996C567FCDB278641535120BA9DD53FADDCB8403D8DCFAE3.pygtex  F84CF8FFEA4BB48D996C567FCDB2786475FCD2556293AA9F8092384C143B0918.pygtex
LLVMIRModify/: LLVMCFGIRMod.cpp  README.md  example1.cpp  makefile  modified.ll  original.ll
LegacyPassExample/: Hello.cpp  makefile
LegacyPassExample/basic-example/: Hello.cpp  example11.bc
LegacyPassExample/live-vars-analysis/: Makefile  README.md  functionpass.cpp  live_variable_analysis_full_pass.cpp  live_variable_analysis_main_pass.cpp
LegacyPassExample/live-vars-analysis/headers/: base_def.hpp  lva_header.hpp
LegacyPassExample/live-vars-analysis/tests/: test_case_5.cpp
ModifyBuildCFG/: ModifyBuildCFG.cpp  example  example1.cpp  example1.mem2reg.ll  makefile  temp.ll  testout.ll
NewPMExample/: FunctionPass.cpp  Hello.cpp  ModulePass.cpp  cfg_example1.dot  example.ll  example1.bc  example1.cpp  example1.ll  example1.mem2reg.ll  makefile
Slides-base/: presentation-1.aux  presentation-1.nav  presentation-1.tex  presentation-1.vrb
Slides-base/_minted-presentation-1/: 542EC39F0CA5376F9F1A47EAA063597F75FCD2556293AA9F8092384C143B0918.pygtex  7AEEE5A857027473614338424A4188EE75FCD2556293AA9F8092384C143B0918.pygtex  E71945BF0FB449F98F468B8AA89A8C0275FCD2556293AA9F8092384C143B0918.pygtex
